Document and export roxy_block()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,10 @@ S3method(roclet_process,roclet_vignette)
 S3method(roclet_tags,roclet_namespace)
 S3method(roclet_tags,roclet_rd)
 S3method(roclet_tags,roclet_vignette)
+export(block_get_tag)
+export(block_get_tag_value)
+export(block_get_tags)
+export(block_has_tags)
 export(env_file)
 export(env_package)
 export(is_s3_generic)
@@ -98,6 +102,7 @@ export(roclet_output)
 export(roclet_preprocess)
 export(roclet_process)
 export(roclet_tags)
+export(roxy_block)
 export(roxy_tag)
 export(roxy_tag_warning)
 export(roxygenise)
