--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(default_export,s3method)
 S3method(default_export,s4class)
 S3method(default_export,s4generic)
 S3method(default_export,s4method)
+S3method(format,object)
 S3method(format,roxy_field)
 S3method(format,roxy_field_alias)
 S3method(format,roxy_field_author)
@@ -41,6 +42,7 @@ S3method(format,roxy_field_source)
 S3method(format,roxy_field_title)
 S3method(format,roxy_field_usage)
 S3method(format,roxy_field_value)
+S3method(format,roxy_tag)
 S3method(merge,roxy_field)
 S3method(merge,roxy_field_inherit)
 S3method(merge,roxy_field_inherit_dot_params)
